--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="key">密码</string>
     <string name="input_key">请输入密码</string>
     <string name="login_student">登录</string>
-    <string name="register_student">注册</string>
+    <string name="register">注册</string>
     <string name="forget_key">忘记密码？</string>
     <string name="teacher_info">教师信息</string>
     <string name="teacher_name">许廷昆</string>
@@ -85,5 +85,22 @@
     <string name="get_verification_code">获取验证码</string>
     <string name="set_new_key">设置新密码：</string>
     <string name="input_the_new_key_hint">请设置新密码</string>
-    <string name="input_the_new_key_again_hint">请请输入一次</string>
+    <string name="input_the_new_key_again_hint">请再输入一次</string>
+    <string name="register_teacher">家教注册</string>
+    <string name="register_student">学生注册</string>
+    <string name="set_the_key">设置密码：</string>
+    <string name="input_the_key_hint">请设置密码</string>
+    <string name="create_info">创建信息</string>
+    <string name="user_name_">用户名：</string>
+    <string name="user_name">发电机启动</string>
+    <string name="sex_student">学生性别：</string>
+    <string name="school">所在学校：</string>
+    <string name="school_name">阜新市第十一中学</string>
+    <string name="grade_">所在年级：</string>
+    <string name="grade">初二</string>
+    <string name="finish">完成</string>
+    <string name="ignore">跳过</string>
+    <string name="boy">男</string>
+    <string name="girl">女</string>
+
 </resources>
