--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="student">我是学生/家长</string>
     <string name="teacher">我是家教</string>
     <string name="phone_number">手机号</string>
-    <string name="key">密码：</string>
+    <string name="key">密码</string>
     <string name="login_student">登录</string>
     <string name="register">注册</string>
     <string name="forget_key">忘记密码？</string>
@@ -84,34 +84,42 @@
     <string name="input_phone_number_hint">请输入您的手机号</string>
     <string name="input_verification_code_hint">请输入验证码</string>
     <string name="get_verification_code">获取验证码</string>
-    <string name="set_new_key">设置新密码：</string>
+    <string name="set_new_key">设置新密码</string>
     <string name="input_the_new_key_hint">请设置新密码</string>
     <string name="input_the_new_key_again_hint">请再输入一次</string>
     <string name="register_teacher">家教注册</string>
     <string name="register_student">学生注册</string>
-    <string name="set_the_key">设置密码：</string>
+    <string name="set_the_key">设置密码</string>
     <string name="input_the_key_hint">请设置密码</string>
     <string name="create_info">创建信息</string>
-    <string name="user_name_">用户名：</string>
+    <string name="user_name_">用户名</string>
     <string name="user_name">发电机启动</string>
-    <string name="sex_student">学生性别：</string>
-    <string name="school">学校：</string>
+    <string name="sex_student">学生性别</string>
+    <string name="school">学校</string>
     <string name="school_name">阜新市第十一中学</string>
-    <string name="grade_">年级：</string>
+    <string name="grade_">年级</string>
     <string name="grade">初二</string>
     <string name="finish">完成</string>
     <string name="ignore">跳过</string>
     <string name="boy">男</string>
     <string name="girl">女</string>
-    <string name="head_portrait">头像：</string>
-    <string name="name">姓名：</string>
-    <string name="nickname">昵称：</string>
-    <string name="sex">性别：</string>
-    <string name="class_">班级：</string>
-    <string name="email_1">邮箱：</string>
-    <string name="address">家庭地址：</string>
-    <string name="contact_phone">联系电话：</string>
-    <string name="contact_phone_number">18341842769</string>
+    <string name="head_portrait">头像</string>
+    <string name="name">姓名</string>
+    <string name="nickname">昵称</string>
+    <string name="sex">性别</string>
+    <string name="class_">班级</string>
+    <string name="email_1">邮箱</string>
+    <string name="address">家庭地址</string>
+    <string name="contact_phone">联系电话</string>
+    <string name="person_info">个人信息</string>
+    <string name="school_info">在校信息</string>
+    <string name="teach_info">教学信息</string>
+    <string name="academy">学院</string>
+    <string name="student_id">学号</string>
+    <string name="a">科目（仅可选择两科，向右滑动模块可删除）</string>
+    <string name="primary_school">小学</string>
+    <string name="teach_time">上课时间</string>
+    <string name="open_appointment">开放预约</string>
 
 
 </resources>
