--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,12 +84,12 @@
     <string name="input_phone_number_hint">请输入您的手机号</string>
     <string name="input_verification_code_hint">请输入验证码</string>
     <string name="get_verification_code">获取验证码</string>
-    <string name="set_new_key">设置新密码</string>
+    <string name="set_new_key">设置新密码:</string>
     <string name="input_the_new_key_hint">请设置新密码</string>
     <string name="input_the_new_key_again_hint">请再输入一次</string>
     <string name="register_teacher">家教注册</string>
     <string name="register_student">学生注册</string>
-    <string name="set_the_key">设置密码</string>
+    <string name="set_the_key">设置密码:</string>
     <string name="input_the_key_hint">请设置密码</string>
     <string name="create_info">创建信息</string>
     <string name="user_name_">用户名</string>
